--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Penguin Path</title>
   </head>
   <body>
     <div id="app"></div>
